fix: mobile display issue

--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,8 @@ footer p {
     width: 100%;
   }
   .home-content .propaganda {
-    font-size: 3rem;
+    font-size: 2.8rem;
+    line-height: 1.5;
   }
   /* ABOUT */
   .about-content p {
